--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-history-api-fallback": "^2.2.1",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.9",
     "passport": "^0.4.0",
